--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -6,3 +6,15 @@ matrix:
   allow_failures:
     - rust: nightly
   fast_finish: true
+# load travis-cargo
+before_script:
+  - |
+      pip install 'travis-cargo<0.2' --user &&
+      export PATH=$HOME/.local/bin:$PATH
+
+# the main build
+script:
+  - |
+      travis-cargo build &&
+      travis-cargo test &&
+      travis-cargo bench
