--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: rust
 rust:
   - beta
@@ -6,6 +7,15 @@ matrix:
   allow_failures:
     - rust: nightly
   fast_finish: true
+# necessary for `travis-cargo coveralls --no-sudo`
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - binutils-dev # optional: only required for the --verify flag of coveralls
+
 # load travis-cargo
 before_script:
   - |
@@ -18,3 +28,7 @@ script:
       travis-cargo build &&
       travis-cargo test &&
       travis-cargo bench
+env:
+  global:
+    # override the default `--features unstable` used for the nightly branch (optional)
+    - TRAVIS_CARGO_NIGHTLY_FEATURE=nightly
