--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -2,24 +2,10 @@ sudo: false
 language: rust
 rust:
   - nightly
-# necessary for `travis-cargo coveralls --no-sudo`
-addons:
-  apt:
-    packages:
-      - libcurl4-openssl-dev
-      - libelf-dev
-      - libdw-dev
-      - binutils-dev # optional: only required for the --verify flag of coveralls
-
-# load travis-cargo
-before_script:
-  - |
-      pip install 'travis-cargo<0.2' --user &&
-      export PATH=$HOME/.local/bin:$PATH
 
 # the main build
 script:
-  - |
-      travis-cargo build &&
-      travis-cargo test &&
-      travis-cargo bench
+  - cargo build
+  - cargo test
+  - cargo bench
+cache: cargo
