--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,10 @@ rand = "0.7.0"
 chrono = "0.4"
 time = "0.1"
 arrayref = "0.3.5"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "rksuid_criterion"
+harness = false
