--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
     script:
       - export CARGO_INCREMENTAL=0
       - export RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zno-landing-pads"
-      - cargo build --verbose $CARGO_OPTIONS
+      - cargo build $CARGO_OPTIONS
       - cargo test --verbose $CARGO_OPTIONS
       - |
         zip -0 ccov.zip `find . \( -name "rksuid*.gc*" \) -print`;
