--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,15 @@ maintenance = {status="actively-developed"}
 
 [dependencies]
 base-encode = "0.3.0"
-rand = "0.7.0"
+rand = "0.7"
 rand_core = "0.5.1"
 chrono = "0.4"
 time = "0.1"
 arrayref = "0.3.5"
 rand_chacha = "0.2.1"
+rand_pcg = "0.2.0"
+rand_hc = "0.2.0"
+rand_xoshiro = "0.4.0"
 hyper-thread-random = "0.4.2"
 wyhash = "0.3.0"
 strum = "0.16.0"
