--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rksuid"
-version = "0.3.1"
+version = "0.4.0"
 authors = ["nharring@gmail.com"]
 edition = "2018"
 description="Rust implementation of the Segment.io KSUID format"
@@ -22,19 +22,13 @@ rand_core = "0.5.1"
 chrono = "0.4"
 time = "0.1"
 arrayref = "0.3.5"
-rand_chacha = "0.2.1"
 rand_pcg = "0.2.0"
-rand_hc = "0.2.0"
-rand_xoshiro = "0.4.0"
-rand_xorshift = "0.2.0"
-hyper-thread-random = "0.4.2"
-wyhash = "0.3.0"
 strum = "0.16.0"
 strum_macros = "0.16.0"
-sfmt = "0.6.0"
 
 [dev-dependencies]
 criterion = "0.3"
+ksuid = "0.2.0"
 
 [[bench]]
 name = "rksuid_criterion"
